--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -1,10 +1,11 @@
+
 <div class="container mt-5">
-  <h1>New Bookmark</h1>
+  <h1>Edit bookmark</h1>
 
   <%= render "form", bookmark: @bookmark %>
 
   <hr>
   <%= link_to bookmarks_path do %>
-    <i class="fa-solid fa-arrow-rotate-left"></i> Back to Bookmark list
+    <i class="fa-solid fa-arrow-rotate-left"></i> Back to bookmark list
   <% end %>
 </div>
