--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,10 +1,14 @@
-<div class="container mt-5">
-  <h1>New Bookmark</h1>
-
-  <%= render "form", bookmark: @bookmark %>
-
-  <hr>
-  <%= link_to bookmarks_path do %>
-    <i class="fa-solid fa-arrow-rotate-left"></i> Back to Bookmark list
-  <% end %>
+<div class="container py-5">
+  <div class="row">
+    <div class="col-12 col-md-6 offset-lg-3">
+      <div class="bg-white rounded p-3 shadow">
+        <h3>Add a movie to your <%= @list.name %> list</h3>
+        <%= simple_form_for [@list, @bookmark] do |f| %>
+          <%= f.input :comment, placeholder: 'Enter a comment about the movie' %>
+          <%= f.association :movie, prompt: "Select a movie", input_html: {data: { controller: "tom-select"}} %>
+          <%= f.submit class: "btn btn-flat" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
